add ability to set grafana version

--- a/charts/chart_deps/grafana/grafana-operated/templates/grafana.yaml
+++ b/charts/chart_deps/grafana/grafana-operated/templates/grafana.yaml
@@ -6,6 +6,9 @@ metadata:
 {{- toYaml .Values.selector | nindent 4 }}
   name: {{ include "grafana-operated.fullname" . }}
 spec:
+  {{- if .Values.version }}
+  version: {{ .Values.version }}
+  {{- end }}
   {{- with .Values.client }}
   client:
   {{- tpl (toYaml .) $ | nindent 4 }}
