--- a/charts/grafana/values.yaml
+++ b/charts/grafana/values.yaml
@@ -20,12 +20,10 @@ global:
 
 grafana-operator:
   enabled: false
-  env:
-    - name: RELATED_IMAGE_GRAFANA
-      value: "docker.io/grafana/grafana:11.5.2"
 
 grafana-main:
   enabled: false
+  #version: "11.5.2"
   selector:
     grafana: main
   config:
