--- a/charts/chart_deps/prometheus/prometheus-operated/values.yaml
+++ b/charts/chart_deps/prometheus/prometheus-operated/values.yaml
@@ -112,9 +112,9 @@ prometheus:
 
     paused: false
 
-    image: "quay.io/prometheus/prometheus:v2.54.1"
+    image: "quay.io/prometheus/prometheus:v2.55.1"
 
-    version: "v2.54.1" #3.2.1
+    version: "v2.55.1"
 
     imagePullPolicy: IfNotPresent
 
