fix alert rabbitmq_detailed_resident_memory_limit_bytes

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -483,7 +483,7 @@ prometheus-rules:
             enabled: false
             for: "20m"
             description: "Container {{ $labels.container }} in pod {{ $labels.pod }} located in namespace {{ $labels.namespace }} is using >90% of 'Memory high watermark' limit for > 20m"
-            expr: sum by (container,pod,namespace) (container_memory_working_set_bytes{container="rabbitmq"}) / on(container,pod,namespace) rabbitmq_detailed_resident_memory_limit_bytes > 0.9
+            expr: sum by (container,pod,namespace) (container_memory_working_set_bytes{container="rabbitmq"}) / on(container,pod,namespace) max by (container,pod,namespace) (rabbitmq_detailed_resident_memory_limit_bytes) > 0.9
           # redis
           Redis_missing_master:
             enabled: false
