--- a/charts/postgres/values.yaml
+++ b/charts/postgres/values.yaml
@@ -170,13 +170,13 @@ postgres-main:
 #    prometheusSelector:
 #      prometheus: main
 #    podMetricsEndpoints:
-#      - targetPort: 9187
+#      - port: metrics
 #        relabelings:
 #          - sourceLabels: [__meta_kubernetes_pod_label_app_kubernetes_io_instance]
 #            action: Replace
 #            regex: (.*)
 #            targetLabel: label_app_kubernetes_io_instance
-#      - targetPort: 9188
+#      - port: metrics-2
 #        relabelings:
 #          - sourceLabels: [__meta_kubernetes_pod_label_app_kubernetes_io_instance]
 #            action: Replace
