fix default labels

--- a/charts/chart_deps/postgres/postgres-cluster/values.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/values.yaml
@@ -41,8 +41,7 @@ nodeAffinity: {}
 podMonitor:
   enabled: false
   labels: {}
-  prometheusSelector:
-    prometheus: main
+  prometheusSelector: {}
   podTargetLabels: []
   podMetricsEndpoints:
     - port: metrics
