--- a/charts/chart_deps/app/common/templates/additionalservices.yaml
+++ b/charts/chart_deps/app/common/templates/additionalservices.yaml
@@ -3,5 +3,5 @@
 {{- $selectorLabels := include "common.selectorLabels" $ | fromYaml }}
 {{- $service := set $service "selectorLabels" $selectorLabels }}
 {{- end }}
-{{- include "networking.service" (list $ (include "common.labels" $) $service )}}
+{{- include "core.service" (list $ (include "common.labels" $) $service )}}
 {{- end }}
