--- a/charts/chart_deps/app/common/templates/clusterrole.yaml
+++ b/charts/chart_deps/app/common/templates/clusterrole.yaml
@@ -1,1 +1,1 @@
-{{- include "roles.clusterrole" (list . (include "common.labels" .) .Values.clusterRole )}}
+{{- include "core.clusterrole" (list . (include "common.labels" .) .Values.clusterRole )}}
