--- a/charts/chart_deps/app/common/templates/role.yaml
+++ b/charts/chart_deps/app/common/templates/role.yaml
@@ -1,1 +1,1 @@
-{{- include "roles.role" (list . (include "common.labels" .) .Values.role )}}
+{{- include "core.role" (list . (include "common.labels" .) .Values.role )}}
