--- a/charts/chart_deps/app/common/templates/serviceaccount.yaml
+++ b/charts/chart_deps/app/common/templates/serviceaccount.yaml
@@ -1,3 +1,3 @@
 {{- $serviceAccount := mustDeepCopy .Values.serviceAccount }}
 {{- $serviceAccount := set $serviceAccount "name" (include "common.serviceAccountName" .) }}
-{{- include "roles.serviceAccount" (list . (include "common.labels" .) $serviceAccount )}}
+{{- include "core.serviceAccount" (list . (include "common.labels" .) $serviceAccount )}}
