--- a/charts/chart_deps/app/core/Chart.yaml
+++ b/charts/chart_deps/app/core/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: roles
-description: Chart that creates ServiceAccounts, ClusterRoles and ClusterRoleBindings, Roles and RoleBindings
+name: core
+description: Chart that creates core kubernetes resources Roles, RoleBindings, Service, Ingress etc
 
 # A chart can be either an 'application' or a 'library' chart.
 #
