Revert "pomerium: try to use konghq for cert validation"
This reverts commit 04d10dee964dcdc8e62fa5544c3aa2766c389a67.

--- a/charts/pomerium/values.yaml
+++ b/charts/pomerium/values.yaml
@@ -34,7 +34,7 @@ certificates:
       - 'authn.{{ .Values.global.company.domain.env }}'
       issuerRef:
         kind: Issuer
-        name: '{{ printf "letsencrypt-%s" "konghq" }}'
+        name: '{{ printf "letsencrypt-%s" .Values.global.ingress.class }}'
   cluster_issuers:
     letsencrypt:
       enabled: false
