--- a/charts/pomerium/values.yaml
+++ b/charts/pomerium/values.yaml
@@ -131,6 +131,8 @@ controller:
         fieldPath: status.podIP
   service:
     type: LoadBalancer
+    annotations:
+      external-dns.alpha.kubernetes.io/hostname: "authn.{{ .Values.global.company.domain.env }}."
     externalTrafficPolicy: Local
     ports:
     - name: https
