--- a/charts/chart_deps/app/common/values.yaml
+++ b/charts/chart_deps/app/common/values.yaml
@@ -100,9 +100,11 @@ additionalServices: []
 
 ingress:
   enabled: false
+  name: '{{ include "common.fullname" . }}'
   className: ""
   service:
     port: 80
+    name: '{{ .Values.service.name }}'
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
