argocd: multiple ingresses support

--- a/charts/argocd/Chart.yaml
+++ b/charts/argocd/Chart.yaml
@@ -22,3 +22,6 @@ dependencies:
     repository: file://../chart_deps/prometheus/probes
     alias: probes
     condition: probes.enabled
+  - name: core
+    version: 0.1.0
+    repository: file://../chart_deps/app/core
