--- a/charts/argocd/values.yaml
+++ b/charts/argocd/values.yaml
@@ -1,6 +1,9 @@
 global:
   company:
     name: #example
+    admins:
+      domain: ""
+      emails: []
     domain:
       root: #example.com
       env: #int.example.com, dev.example.com, prd.example.com etc
@@ -12,7 +15,7 @@ global:
     prefix:
     suffix:
   ingress:
-    class: konghq
+    class: pomerium
   #Cant use env: here because
   #env is already set as global
   #attr in original argocd chart
@@ -21,7 +24,35 @@ global:
     server: #https://2.2.2.2
     short_name: #pre/prd/int/dev/etc
 
-argo-cd:
+ingresses:
+  server:
+    enabled: false
+    name: '{{ include "argocd.fullname" . }}-server'
+    service:
+      name: '{{ include "argocd.fullname" . }}-server'
+      port: 80
+    className: "{{ .Values.global.ingress.class }}"
+    annotations:
+      cert-manager.io/cluster-issuer: '{{ printf "letsencrypt-%s" .Values.global.ingress.class }}'
+      ingress.pomerium.io/pass_identity_headers: 'true'
+      ingress.pomerium.io/policy: |
+        allow:
+          or:
+            {{- range $email := .Values.global.company.admins.emails }}
+            - user:
+                is: {{ $email }}
+            {{- end }}
+    hosts:
+    - host: "argocd.{{ .Values.global.company.domain.env }}"
+      paths:
+      - path: /
+        pathType: ImplementationSpecific
+    tls:
+    - secretName: argocd-tls
+      hosts:
+      - "argocd.{{ .Values.global.company.domain.env }}"
+
+argocd:
   enabled: false
   crds:
     install: false
@@ -57,7 +88,13 @@ argo-cd:
     replicas: 2
 
   applicationSet:
-    replicaCount: 2
+    replicas: 1
+
+  dex:
+    enabled: false
+
+  notifications:
+    enabled: false
 
 certificates:
   enabled: false
@@ -72,6 +109,26 @@ redis:
     enabled: false
     prometheusSelector:
       prometheus: main
+  auth:
+    secretPath: argocd-redis
+  sentinel:
+    replicas: 3
+    exporter:
+      enabled: true
+      image: leominov/redis_sentinel_exporter:1.7.1
+  redis:
+    replicas: 3
+    exporter:
+      enabled: true
+      image: oliver006/redis_exporter:v1.69.0
+      env:
+      - name: REDIS_USER
+        value: default
+      - name: REDIS_PASSWORD
+        valueFrom:
+          secretKeyRef:
+            key: redis-password
+            name: argocd-redis
 
 probes:
   enabled: false
