--- a/charts/environment/values.yaml
+++ b/charts/environment/values.yaml
@@ -2,6 +2,9 @@ labels: {}
 
 company:
   name: #example
+  admins:
+    domain: ""
+    emails: []
   domain:
     root: #example.com
     env: #int.example.com, dev.example.com, prd.example.com etc
