--- a/charts/postgres/values.yaml
+++ b/charts/postgres/values.yaml
@@ -3,6 +3,9 @@ global:
     tag: stub
   company:
     name: #example
+    admins:
+      domain: ""
+      emails: []
     domain:
       root: #example.com
       env: #int.example.com, dev.example.com, prd.example.com etc
