--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -8,6 +8,9 @@ global:
 
   company:
     name: #example
+    admins:
+      domain: ""
+      emails: []
     domain:
       root: #example.com
       env: #int.example.com, dev.example.com, prd.example.com etc
