--- a/charts/argocd/Chart.yaml
+++ b/charts/argocd/Chart.yaml
@@ -6,7 +6,8 @@ dependencies:
   - name: argo-cd
     version: 7.8.18
     repository: https://argoproj.github.io/argo-helm
-    condition: argo-cd.enabled
+    alias: argocd
+    condition: argocd.enabled
   - name: certificates
     version: 0.1.0
     repository: file://../chart_deps/security/certificates
