--- a/charts/argocd/values.yaml
+++ b/charts/argocd/values.yaml
@@ -52,7 +52,7 @@ ingresses:
       hosts:
       - "argocd.{{ .Values.global.company.domain.env }}"
 
-argo-cd:
+argocd:
   enabled: false
   crds:
     install: false
