feature: pomerium + core library chart (#47)
* pomerium: crds

* chart_deps/app: workloads, roles, networking library charts

* chart_deps/app/common: adjust chart to use new library charts

* pomerium: chart

* chart_deps/app: merge small charts to core chart

* chart_deps/app/common: try to commit core chart archive to common

* pomerium: certificates, pomerium crd, global values

* pomerium: try to use konghq for cert validation

* Revert "pomerium: try to use konghq for cert validation"

This reverts commit 04d10dee964dcdc8e62fa5544c3aa2766c389a67.

* pomerium: switch to clusterissuer

* chart_deps/core: service add annotations

* pomerium: fix lb + remove unsupported sec context

* pomerium: initial selfsigned cert

* external-dns: ingress as sources

* pomerium: rename service to pomerium proxy

* chart_deps/app/core: ingress + adjust chart_deps/app/common chart to use core ingress templates

* argocd: multiple ingresses support

* charts: company.admins section

* environments: new admins section in defaultValuesTpl

* argocd: change back root

* argocd: adjust ingress name + user -> email

* argocd: try to rename root chart

* argocd: update lock

* environment: argo-cd -> argocd

* grafana: use ingresses + move essential values to charts

* grafana: fix grafana main service name

* konghq: remove star annotation for external dns

* add changelog

* argocd: jwt issue comment

* changelog: rephrase

* changelog: rephrase

* argocd: update main chart

* argocd: update redis exporter

* pomerium: update version

* grafana: update operator

* changelog: rephrase

* chart_deps/app/coommon: add readme

* grafana: update crds

* argocd: update crds

* changelog: update

--- a/charts/chart_deps/app/common/templates/service.yaml
+++ b/charts/chart_deps/app/common/templates/service.yaml
@@ -1,17 +1,6 @@
-{{- if .Values.service.enabled }}
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ include "common.fullname" . }}
-  labels:
-    {{- include "common.labels" . | nindent 4 }}
-spec:
-  type: {{ .Values.service.type }}
-  {{- with .Values.service.ports }}
-  ports:
-  {{- toYaml . | nindent 4 }}
-  {{- end }}
-  selector:
-    {{- include "common.selectorLabels" . | nindent 4 }}
+{{- $service := mustDeepCopy .Values.service }}
+{{- if not $service.selectorLabels }}
+{{- $selectorLabels := include "common.selectorLabels" . | fromYaml }}
+{{- $service := set $service "selectorLabels" $selectorLabels }}
 {{- end }}
+{{- include "core.service" (list . (include "common.labels" .) $service )}}
