--- a/charts/chart_deps/app/common/templates/serviceaccount.yaml
+++ b/charts/chart_deps/app/common/templates/serviceaccount.yaml
@@ -1,12 +1,3 @@
-{{- if .Values.serviceAccount.create -}}
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: {{ include "common.serviceAccountName" . }}
-  labels:
-    {{- include "common.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
-  annotations:
-    {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-{{- end }}
+{{- $serviceAccount := mustDeepCopy .Values.serviceAccount }}
+{{- $serviceAccount := set $serviceAccount "name" (include "common.serviceAccountName" .) }}
+{{- include "core.serviceAccount" (list . (include "common.labels" .) $serviceAccount )}}
