--- a/charts/grafana/Chart.yaml
+++ b/charts/grafana/Chart.yaml
@@ -30,7 +30,10 @@ dependencies:
     condition: grafana-main.enabled
   #https://github.com/grafana/grafana-operator/tree/v5.17.0/deploy/helm/grafana-operator
   - name: grafana-operator
-    version: v5.17.0
+    version: v5.17.1
     alias: grafana-operator
     condition: grafana-operator.enabled
     repository: oci://ghcr.io/grafana/helm-charts
+  - name: core
+    version: 0.1.0
+    repository: file://../chart_deps/app/core
