--- a/charts/argocd/Chart.yaml
+++ b/charts/argocd/Chart.yaml
@@ -4,9 +4,10 @@ version: 1.0.0
 dependencies:
   #https://github.com/argoproj/argo-helm/tree/argo-cd-7.8.18/charts/argo-cd
   - name: argo-cd
-    version: 7.8.18
+    version: 7.8.26
     repository: https://argoproj.github.io/argo-helm
-    condition: argo-cd.enabled
+    alias: argocd
+    condition: argocd.enabled
   - name: certificates
     version: 0.1.0
     repository: file://../chart_deps/security/certificates
@@ -22,3 +23,6 @@ dependencies:
     repository: file://../chart_deps/prometheus/probes
     alias: probes
     condition: probes.enabled
+  - name: core
+    version: 0.1.0
+    repository: file://../chart_deps/app/core
