--- a/charts/argocd/templates/ingresses.yaml
+++ b/charts/argocd/templates/ingresses.yaml
@@ -1,3 +1,5 @@
 {{- range $ingress_name, $ingress_obj := .Values.ingresses }}
-{{- include "core.ingress" (list $ (include "argocd.labels" $) $ingress_obj )}}
+{{- $labels := include "argocd.labels" $ | fromYaml }}
+{{- $labels := set $labels "app.kubernetes.io/name" (printf "%s-%s" (get $labels "app.kubernetes.io/name") $ingress_name )}}
+{{- include "core.ingress" (list $ (toYaml $labels) $ingress_obj )}}
 {{- end }}
