--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -260,6 +260,17 @@ prometheus-blackbox-exporter:
           fail_if_not_ssl: true
           headers:
             X-Healthcheck-Agent: "blackbox-exporter"
+      http_3xx:
+        prober: http
+        timeout: 30s
+        http:
+          valid_http_versions: ["HTTP/1.1", "HTTP/2.0"]
+          valid_status_codes: [301, 302]
+          method: GET
+          no_follow_redirects: true
+          fail_if_not_ssl: false
+          headers:
+            X-Healthcheck-Agent: "blackbox-exporter"
 
 probes:
   enabled: false
