--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -183,9 +183,11 @@ kube-state-metrics:
       # ADD COMMON pod and LABEL TO ALL METRICS
       # values based on orgiginal exported_pod label (container also)
       - sourceLabels: ["exported_pod"]
+        action: "replace"
         targetLabel: "pod"
       - sourceLabels: ["exported_container", "label_app_kubernetes_io_name"]
         separator: ""
+        action: "replace"
         targetLabel: "container"
       - sourceLabels: ["exported_namespace"]
         targetLabel: "namespace"
@@ -194,6 +196,7 @@ kube-state-metrics:
       - sourceLabels:
           - "label_cloud_google_com_gke_nodepool"
         targetLabel: "nodepool"
+        action: "replace"
 
     namespace: prometheus
 
