prometheus: use common yaml approach for kubestate relabelings

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -193,8 +193,7 @@ kube-state-metrics:
         targetLabel: "namespace"
       # Abstract away from cloud related node
       # labels
-      - sourceLabels:
-          - "label_cloud_google_com_gke_nodepool"
+      - sourceLabels: ["label_cloud_google_com_gke_nodepool"]
         targetLabel: "nodepool"
         action: "replace"
 
