grafana/services dashboard: node pannel + redis master/slave pannels fixes (#49)
* prometheus: enable node metrics

* prometheus: expose node labels

* prometheus: relabel gke related node labels

* prometheus: add comments

* prometheus: action: replace for relabling configs

* grafana/service dashboard: node count pannel + Redis master/slave fixes

* changelod: add

* grafana: fix none updating pannel

* prometheus: use common yaml approach for kubestate relabelings

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -146,7 +146,7 @@ kube-state-metrics:
     repository: bitnami/kube-state-metrics
 
   extraArgs:
-    metric-labels-allowlist: "pods=[*],deployments=[*]"
+    metric-labels-allowlist: "pods=[*],deployments=[*],nodes=[*]"
 
   kubeResources:
     certificatesigningrequests: false
@@ -162,7 +162,7 @@ kube-state-metrics:
     mutatingwebhookconfigurations: false
     namespaces: false
     networkpolicies: false
-    nodes: false
+    nodes: true
     persistentvolumeclaims: true
     persistentvolumes: true
     poddisruptionbudgets: false
@@ -183,12 +183,19 @@ kube-state-metrics:
       # ADD COMMON pod and LABEL TO ALL METRICS
       # values based on orgiginal exported_pod label (container also)
       - sourceLabels: ["exported_pod"]
+        action: "replace"
         targetLabel: "pod"
       - sourceLabels: ["exported_container", "label_app_kubernetes_io_name"]
         separator: ""
+        action: "replace"
         targetLabel: "container"
       - sourceLabels: ["exported_namespace"]
         targetLabel: "namespace"
+      # Abstract away from cloud related node
+      # labels
+      - sourceLabels: ["label_cloud_google_com_gke_nodepool"]
+        targetLabel: "nodepool"
+        action: "replace"
 
     namespace: prometheus
 
