--- a/charts/postgres/values.yaml
+++ b/charts/postgres/values.yaml
@@ -14,6 +14,7 @@ global:
   registry:
     url:
   bucket:
+    type:
     prefix:
     suffix:
   ingress:
@@ -25,16 +26,30 @@ global:
 
 postgres-operator:
   enabled: false
+  resources:
+    limits:
+      cpu: 350m
+      memory: 150Mi
+    requests:
+      cpu: 10m
+      memory: 35Mi
   configAwsOrGcp:
     wal_gs_bucket: "{{ .Values.global.bucket.prefix }}-postgres-{{ .Values.global.bucket.suffix }}"
   configLogicalBackup:
+    logical_backup_provider: "{{ .Values.global.bucket.type }}"
     logical_backup_s3_bucket: "{{ .Values.global.bucket.prefix }}-postgres-backup-{{ .Values.global.bucket.suffix }}"
-    logical_backup_docker_image: "ghcr.io/zalando/postgres-operator/logical-backup:v1.14.0"
+    logical_backup_docker_image: "{{ .Values.global.registry.url}}/pg-logical-backup:v1.14.0-1"
+  # resources for logical backup pod, if empty configPostgresPodResources will be used
+    logical_backup_cpu_limit: "2"
+    logical_backup_cpu_request: 200m
+    logical_backup_memory_limit: 500Mi
+    logical_backup_memory_request: 300Mi
   configGeneral:
     enable_crd_registration: false
-    docker_image: gramal/spilo:15-f0c5f71
+    docker_image: "{{ .Values.global.registry.url}}/spilo:v17-1"
   configMajorVersionUpgrade:
     major_version_upgrade_mode: "off"
+    target_major_version: '17'
   podServiceAccount:
     name: "postgres"
   configKubernetes:
