--- a/charts/prometheus/Chart.yaml
+++ b/charts/prometheus/Chart.yaml
@@ -81,3 +81,6 @@ dependencies:
     version: 4.8.2
     alias: prometheus-stackdriver-exporter
     condition: prometheus-stackdriver-exporter.enabled
+  - name: core
+    version: 0.1.0
+    repository: file://../chart_deps/app/core
